# tumulus

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/btrfs-search/: Cargo.toml
crates/btrfs-search/src/: items.rs  lib.rs  results.rs  search.rs
crates/btrfs-search/src/items/: file_extent.rs
crates/extentria/: CROSS_PLATFORM_PLAN.md  Cargo.toml
crates/extentria/src/: fallback.rs  fiemap.rs  freebsd.rs  lib.rs  linux.rs  macos.rs  types.rs  unix_seek.rs  windows.rs
crates/extentria/tests/: integration.rs
crates/fs-info/: Cargo.toml
crates/fs-info/src/: lib.rs
crates/tumulus/: Cargo.toml
crates/tumulus-server/: Cargo.toml  PLAN.md
crates/tumulus-server/src/: api.rs  blob.rs  config.rs  db.rs  lib.rs  main.rs  storage.rs
crates/tumulus-server/src/api/: blobs.rs  catalogs.rs  error.rs  extents.rs
crates/tumulus-server/src/storage/: fs.rs  types.rs
crates/tumulus-server/tests/: upload_integration.rs
crates/tumulus/src/: catalog.rs  commands.rs  compression.rs  extents.rs  file.rs  fsinfo.rs  id.rs  lib.rs  machine.rs  main.rs  models.rs  tree.rs
crates/tumulus/src/commands/: catalog.rs  compare.rs  debug_extents.rs  upload.rs
migrations/2024-12-20-000000_create_metadata/: down.sql  up.sql
src/: btrfs_search.rs  lib.rs  main.rs  models.rs  schema.rs
