[package]
name = "fs-info"
version = "0.0.0"
edition = "2024"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["fs"] }

[target.'cfg(target_os = "linux")'.dependencies]
linux-raw-sys = { version = "0.12.0", features = ["ioctl", "general", "btrfs"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Storage_FileSystem",
] }
