[package]
name = "tumulus-server"
version = "0.0.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
bytes = "1"
futures = "0.3"
async-trait = "0.1"
hex = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
lloggs = "1.3"
tracing = "0.1"
tempfile = "3"
thiserror = "2"
rusqlite = { version = "0.35", features = ["bundled"] }
zstd = "0.13"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
tumulus = { path = "../tumulus" }
