[package]
name = "tumulus-server"
version = "0.0.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros"] }
blake3 = "1.8.3"
bytes = "1.11.0"
clap = { version = "4.5.54", features = ["derive"] }
futures = "0.3.31"
hex = "0.4.3"
lloggs = "1.3.0"
qbsdiff = "1.4.1"
rusqlite = { version = "0.35.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.24.0"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["io"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
zstd = "0.13.3"

[dev-dependencies]
reqwest = { version = "0.12.28", features = ["json", "blocking"] }
tumulus = { path = "../tumulus" }
