[package]
name = "tumulus"
version = "0.0.0"
edition = "2024"

[dependencies]
blake3 = { version = "1.8.3", features = ["rayon"] }
clap = { version = "4.5", features = ["derive"] }
extentria.workspace = true
hex = "0.4"
hostname = "0.4"
jiff = "0.2"
lloggs = "1.3"
machine-uid = "0.5"
memmap2 = "0.9"
rayon = "1.10"
reqwest = { version = "0.12", features = ["json", "blocking"] }
rusqlite = { version = "0.35", features = ["bundled", "blob"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.15"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1.19", features = ["v4", "serde"] }
walkdir = "2.5"
zstd = "0.13"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["fs"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Storage_FileSystem",
] }
