[package]
name = "tumulus"
version = "0.0.0"
edition = "2024"

[dependencies]
blake3 = { version = "1.8.3", features = ["rayon"] }
clap = { version = "4.5.54", features = ["derive"] }
extentria.workspace = true
hex = "0.4.3"
hostname = "0.4.2"
jiff = "0.2.18"
lloggs = "1.3.0"
machine-uid = "0.5.4"
memmap2 = "0.9.9"
rayon = "1.11.0"
reqwest = { version = "0.12.28", features = ["json", "blocking"] }
rusqlite = { version = "0.35.0", features = ["bundled", "blob"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.24.0"
thiserror = "2.0.17"
tracing = "0.1.44"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
walkdir = "2.5.0"
zstd = "0.13.3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["fs"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Storage_FileSystem",
] }
